<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_products"
            android:icon="@drawable/ic_baseline_shopping_cart_24dp"
            android:title="@string/products"
            android:checked="true" />
        <item
            android:id="@+id/item_users"
            android:icon="@drawable/ic_baseline_person_24dp"
            android:title="@string/users" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_baseline_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24dp"
            android:title="@string/log_out" />
    </group>
</menu>